--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,7 @@
     "jwt-simple": "^0.5.6",
     "moment": "^2.27.0",
     "mongoose": "^5.9.28",
-    "nodemon": "^2.0.4",
-    "pg": "^8.7.3",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.19.2"
+    "nodemon": "^2.0.4"
   },
   "scripts": {
     "start": "nodemon  index.js"
