--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,9 @@
     "jwt-simple": "^0.5.6",
     "moment": "^2.27.0",
     "mongoose": "^5.9.28",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.4.0"
   },
   "scripts": {
     "start": "nodemon  index.js"
